# midi-player

./: .gitignore  CMakeLists.txt
src/: main.cpp  reader.hpp  util.hpp
src/app/: cli.hpp  preview.hpp
src/audio/: player.cpp  player.hpp
src/common/: reader.hpp
src/io/: io.hpp
src/midi/: events.hpp  smf.cpp  smf.hpp  tempo.cpp  tempo.hpp
